# deep-learning-from-scratch

./: pyproject.toml
ch07/: simple_convnet.py
common/: layers.py  util.py
